fix:fixed contacts
